# cr_tracker-miners-3.4.2

./: .gitignore  .gitlab-ci.yml  COPYING  HACKING.md  README.md  check-style.py  config-miners.h.meson.in  meson.build  run-uninstalled.in  tracker-miners.doap
data/: meson.build  org.freedesktop.Tracker.Miner.Files.gschema.xml  org.freedesktop.domain.rule.in
docs/manpages/: meson.build  tracker-miner-fs-3.1.txt  tracker-miner-rss-3.1.txt  tracker-writeback-3.1.txt  tracker3-daemon.1.txt  tracker3-extract.1.txt  tracker3-index.1.txt  tracker3-info.1.txt  tracker3-reset.1.txt  tracker3-search.1.txt  tracker3-status.1.txt  tracker3-tag.1.txt
examples/python/: meson.build  query-async.py  query-sync.py
src/: create-miner-symlinks.sh  meson.build
src/libtracker-extract/: meson.build  tracker-data.h  tracker-encoding-enca.c  tracker-module-manager.c  tracker-module-manager.h
src/libtracker-miner/: meson.build  tracker-crawler.c  tracker-file-notifier.c  tracker-file-notifier.h  tracker-indexing-tree.c  tracker-miner-enum-types.c.template  tracker-miner-enum-types.h.template  tracker-miner-fs.c  tracker-miner-fs.h  tracker-miner.h  tracker-miner.vapi  tracker-monitor-fanotify.c  tracker-monitor-fanotify.h  tracker-monitor-glib.c  tracker-monitor-glib.h  tracker-monitor-private.h  tracker-monitor.c  tracker-monitor.h  tracker-sparql-buffer.c  tracker-utils.c
src/libtracker-miners-common/: libtracker-miners-common.vapi  meson.build  tracker-common.h  tracker-file-utils.c  tracker-file-utils.h  tracker-language.c  tracker-language.h  tracker-miners-common.h  tracker-miners-enum-types.c.template  tracker-seccomp.c  tracker-term-utils.c
src/miners/: meson.build
src/miners/fs/: .gitignore  meson.build  org.freedesktop.Tracker3.Miner.Files.service.in  tracker-main.c  tracker-miner-files-methods.c  tracker-miner-files-methods.h  tracker-miner-files.c  tracker-miner-files.h  tracker-miner-fs.desktop.in  tracker-miner-fs.service.in  tracker-power-hal.c  tracker-power-upower.c  tracker-power.h
src/miners/rss/: meson.build  org.freedesktop.Tracker3.Miner.RSS.service.in  tracker-main.c  tracker-miner-rss.c  tracker-miner-rss.desktop.in  tracker-miner-rss.h  tracker-miner-rss.service.in
src/tracker/: make-uninstalled-command-links.sh  meson.build  tracker-color.h  tracker-process.c  tracker-search.c  tracker-status.c  tracker-tag.c
src/tracker-control/: meson.build  org.freedesktop.Tracker3.Miner.Files.Control.service.in  org.freedesktop.Tracker3.Miner.Files.Proxy.xml  tracker-control.service.in  tracker-miner-files-index.c
src/tracker-extract/: .gitignore  10-abw.rule  10-bmp.rule  10-comics.rule  10-desktop.rule  10-ebooks.rule  10-epub.rule  10-folder.rule  10-gif.rule  10-html.rule  10-ico.rule  10-jpeg.rule  10-mp3.rule  10-msoffice.rule  10-oasis.rule  10-pdf.rule  10-png.rule  10-ps.rule  10-raw.rule  10-svg.rule  10-tiff.rule  10-xps.rule  11-iso.rule  11-msoffice-xml.rule  15-executable.rule  15-games.rule  15-gstreamer-guess.rule  15-playlist.rule  15-text.rule  90-disc-generic.rule  90-gstreamer-audio-generic.rule  90-gstreamer-video-generic.rule  90-libav-audio-generic.rule  90-libav-video-generic.rule  calculate-hash.sh  meson.build  org.freedesktop.Tracker3.Miner.Extract.service.in  setup-extract-rules.sh  tracker-cue-sheet.c  tracker-cue-sheet.h  (+31 more)
src/tracker-writeback/: .gitignore  meson.build  org.freedesktop.Tracker3.Writeback.service.in  tracker-main.c  tracker-writeback-file.c  tracker-writeback-file.h  tracker-writeback-gstreamer.c  tracker-writeback-module.c  tracker-writeback-module.h  tracker-writeback-playlist.c  tracker-writeback-xmp.c  tracker-writeback.c  tracker-writeback.h  tracker-writeback.service.in  tracker-writeback.xml
tests/: meson.build
tests/common/: meson.build
tests/estress/: abstract_engine.py  abstract_text_engine.py  client.py  mock_engine.py  options.py  rss_engine.py  wh_engine.py
tests/functional-tests/: cli.py  configuration.json.in  configuration.py  datagenerator.py  detect-h264-codec.sh  extractor-decorator.py  extractor-flac-cuesheet.py  extractor-generic.py  fixtures.py  fts-basic.py  fts-file-operations.py  fts-stopwords.py  meson.build  miner-basic.py  miner-removable-media.py  miner-resource-removal.py  minerhelper.py  test-domain.rule.in  writeback-audio.py  writeback-image-details.py  writeback-images.py
tests/functional-tests/mockvolumemonitor/: meson.build  mock-drive.c  mock-drive.h  mock-mount.c  mock-mount.h  mock-volume-monitor.c  mock-volume-monitor.h  mock-volume.c  mock-volume.h
tests/functional-tests/test-cli-data/text/: Document 1.txt  Document 2.txt  mango.txt
tests/functional-tests/test-extraction-data/: README
tests/functional-tests/test-extraction-data/audio/: cuesheet-test.cue  flac-musicbrainz.expected.json  flac.expected.json  flac.flac  mp3-id3v2.3-empty-artist-album.expected.json  (+4 more)
tests/functional-tests/test-writeback-data/: writeback-test-7.flac
tests/libtracker-extract/: areas-with-contacts.xmp  meson.build  nb282393.xmp  nb282393_simple.xmp  tracker-encoding-test.c  tracker-exif-test.c  tracker-extract-info-test.c  tracker-guarantee-test.c  tracker-iptc-test.c  tracker-module-manager-test.c  tracker-utils-test.c  tracker-xmp-test.c
tests/libtracker-extract/test-extract-rules/: 90-audio-generic.rule  90-image-generic.rule
tests/libtracker-miner/: .gitignore  meson.build  miners-mock.c  miners-mock.h  tracker-crawler-test.c  tracker-file-enumerator-test.c  tracker-file-notifier-test.c  tracker-indexing-tree-test.c  tracker-miner-fs-test.c  tracker-monitor-test.c  tracker-priority-queue-test.c  tracker-task-pool-test.c
tests/libtracker-miners-common/: meson.build  tracker-date-time-test.c  tracker-dbus-test.c  tracker-file-utils-test.c  tracker-sched-test.c  tracker-type-utils-test.c  tracker-utils-test.c
tests/services/: meson.build  org.freedesktop.Tracker3.Miner.Extract.service.in  org.freedesktop.Tracker3.Miner.Files.Control.service.in  org.freedesktop.Tracker3.Miner.Files.service.in  org.freedesktop.Tracker3.Writeback.service.in
tests/services/miners/: meson.build
(+88 files in other folders)
